fix sidebar not disappearing on small width

--- a/web_root/main.css
+++ b/web_root/main.css
@@ -26,7 +26,7 @@ body {
 
 @media (max-width: 800pt) {
   .sidebar {
-    lay: none;
+    display: none;
   }
 }
 
